src/formula/grammar/FormulaParser.js
// @ts-nocheck
/* eslint-disable */


import antlr4 from "../../../vendor/antlr4-all.js";



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class FormulaParser extends antlr4.Parser {

    static grammarFileName = "Formula.g4";
    static literalNames = [ null, "'('", "','", "')'", "'<-'", "':'", "'!'",
                            "'not'", "'.'", null, null, null, null, null,
                            "'while'", "'for'", "'from'", "'in'", "'to'",
                            "'by'", "'loop'", "'if'", "'then'", "'else'",
                            "'function'", "'end'", "'return'", "'new'",
                            "'try'", "'catch'", "'throw'", null, "'xor'",
                            null, null, null, "'<'", "'<='", "'>'", "'>='",
                            "'+'", "'-'", "'*'", "'/'", null, "'^'", null,
                            null, "'{'", "'}'", null, null, null, "'per'",
                            "'squared'", "'cubed'", null, null, "'['", "']'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null,
                             null, "COMMENT", "LINE_COMMENT", "R__", "R_",
                             "NEWLINES", "WHILESTATEMENT", "FORSTATEMENT",
                             "FROMSTATEMENT", "INSTATEMENT", "TOSTATEMENT",
                             "BYSTATEMENT", "LOOPSTATEMENT", "IFSTATEMENT",
                             "THENSTATEMENT", "ELSESTATEMENT", "FUNCTIONSTATEMENT",
                             "ENDBLOCK", "RETURNSTATEMENT", "NEWSTATEMENT",
                             "TRYSTATEMENT", "CATCHSTATEMENT", "THROWSTATEMENT",
                             "OR", "XOR", "AND", "EQUALS", "NOTEQUALS",
                             "LT", "LTEQ", "GT", "GTEQ", "PLUS", "MINUS",
                             "MULT", "DIV", "MOD", "POW", "LARR", "RARR",
                             "LCURL", "RCURL", "INTEGER", "FLOAT", "BOOL",
                             "PER", "SQUARED", "CUBED", "IDENT", "PRIMITIVE",
                             "LBRACKET", "RBRACKET", "SPACE", "STRING" ];
    static ruleNames = [ "lines", "expression", "returnExp", "innerBlock",
                         "whileLoop", "forLoop", "forInLoop", "ifThenElse",
                         "functionDef", "tryCatch", "throwExp", "anonFunctionDef",
                         "assignment", "assigned", "logicalExpression",
                         "booleanXORExpression", "booleanAndExpression",
                         "equalityExpression", "relationalExpression", "additiveExpression",
                         "multiplicativeExpression", "arrayExpression",
                         "negationExpression", "powerExpression", "unaryOrNegate",
                         "unaryExpression", "innerPrimaryExpression", "selectionExpression",
                         "funCall", "primaryExpression", "value", "material",
                         "array", "newObject", "defaultValue", "selector",
                         "minarray", "dotselector", "arrayName", "label",
                         "number", "negnumber", "unitMultiplicativeExpression",
                         "unitInnerMultiplicativeExpression", "unitClump",
                         "unitPowerExpression", "unit", "string" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = FormulaParser.ruleNames;
        this.literalNames = FormulaParser.literalNames;
        this.symbolicNames = FormulaParser.symbolicNames;
    }



	lines() {
	    let localctx = new LinesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, FormulaParser.RULE_lines);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 99;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===11 || _la===12) {
	            this.state = 96;
	            _la = this._input.LA(1);
	            if(!(_la===11 || _la===12)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 101;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 120;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 1562427586) !== 0) || ((((_la - 41)) & ~0x1f) === 0 && ((1 << (_la - 41)) & 1150625) !== 0)) {
	            this.state = 102;
	            this.expression();
	            this.state = 111;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 104;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    do {
	                        this.state = 103;
	                        this.match(FormulaParser.R__);
	                        this.state = 106;
	                        this._errHandler.sync(this);
	                        _la = this._input.LA(1);
	                    } while(_la===11);
	                    this.state = 108;
	                    this.expression();
	                }
	                this.state = 113;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
	            }

	            this.state = 117;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===11 || _la===12) {
	                this.state = 114;
	                _la = this._input.LA(1);
	                if(!(_la===11 || _la===12)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	                this.state = 119;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 122;
	        this.match(FormulaParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expression() {
	    let localctx = new ExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, FormulaParser.RULE_expression);
	    try {
	        this.state = 134;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 124;
	            this.assignment();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 125;
	            this.logicalExpression();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 126;
	            this.whileLoop();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 127;
	            this.forLoop();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 128;
	            this.forInLoop();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 129;
	            this.ifThenElse();
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 130;
	            this.functionDef();
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 131;
	            this.returnExp();
	            break;

	        case 9:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 132;
	            this.tryCatch();
	            break;

	        case 10:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 133;
	            this.throwExp();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	returnExp() {
	    let localctx = new ReturnExpContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, FormulaParser.RULE_returnExp);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 136;
	        this.match(FormulaParser.RETURNSTATEMENT);

	        this.state = 140;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===12) {
	            this.state = 137;
	            this.match(FormulaParser.R_);
	            this.state = 142;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 143;
	        this.logicalExpression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	innerBlock() {
	    let localctx = new InnerBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, FormulaParser.RULE_innerBlock);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 148;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 145;
	                _la = this._input.LA(1);
	                if(!(_la===11 || _la===12)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	            }
	            this.state = 150;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	        }

	        this.state = 169;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 1562427586) !== 0) || ((((_la - 41)) & ~0x1f) === 0 && ((1 << (_la - 41)) & 1150625) !== 0)) {
	            this.state = 151;
	            this.expression();
	            this.state = 160;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 153;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    do {
	                        this.state = 152;
	                        this.match(FormulaParser.R__);
	                        this.state = 155;
	                        this._errHandler.sync(this);
	                        _la = this._input.LA(1);
	                    } while(_la===11);
	                    this.state = 157;
	                    this.expression();
	                }
	                this.state = 162;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
	            }

	            this.state = 166;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,10,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 163;
	                    _la = this._input.LA(1);
	                    if(!(_la===11 || _la===12)) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                }
	                this.state = 168;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,10,this._ctx);
	            }

	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	whileLoop() {
	    let localctx = new WhileLoopContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, FormulaParser.RULE_whileLoop);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 171;
	        this.match(FormulaParser.WHILESTATEMENT);

	        this.state = 175;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===12) {
	            this.state = 172;
	            this.match(FormulaParser.R_);
	            this.state = 177;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 178;
	        this.logicalExpression();

	        this.state = 179;
	        this.match(FormulaParser.R__);
	        this.state = 180;
	        this.innerBlock();
	        this.state = 182;
	        this.match(FormulaParser.R__);
	        this.state = 183;
	        this.match(FormulaParser.ENDBLOCK);
	        this.state = 184;
	        this.match(FormulaParser.R_);
	        this.state = 185;
	        this.match(FormulaParser.LOOPSTATEMENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	forLoop() {
	    let localctx = new ForLoopContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, FormulaParser.RULE_forLoop);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 187;
	        this.match(FormulaParser.FORSTATEMENT);
	        this.state = 188;
	        this.match(FormulaParser.R_);
	        this.state = 189;
	        this.match(FormulaParser.IDENT);
	        this.state = 190;
	        this.match(FormulaParser.R_);
	        this.state = 191;
	        this.match(FormulaParser.FROMSTATEMENT);

	        this.state = 195;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===12) {
	            this.state = 192;
	            this.match(FormulaParser.R_);
	            this.state = 197;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 198;
	        this.logicalExpression();

	        this.state = 202;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===12) {
	            this.state = 199;
	            this.match(FormulaParser.R_);
	            this.state = 204;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 205;
	        this.match(FormulaParser.TOSTATEMENT);

	        this.state = 209;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===12) {
	            this.state = 206;
	            this.match(FormulaParser.R_);
	            this.state = 211;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 212;
	        this.logicalExpression();
	        this.state = 227;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===12 || _la===19) {
	            this.state = 216;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===12) {
	                this.state = 213;
	                this.match(FormulaParser.R_);
	                this.state = 218;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 219;
	            this.match(FormulaParser.BYSTATEMENT);

	            this.state = 223;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===12) {
	                this.state = 220;
	                this.match(FormulaParser.R_);
	                this.state = 225;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 226;
	            this.logicalExpression();
	        }

	        this.state = 231;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,19,this._ctx);
	        if(la_===1) {
	            this.state = 229;
	            this.match(FormulaParser.R__);
	            this.state = 230;
	            this.innerBlock();

	        }
	        this.state = 233;
	        this.match(FormulaParser.R__);
	        this.state = 234;
	        this.match(FormulaParser.ENDBLOCK);
	        this.state = 235;
	        this.match(FormulaParser.R_);
	        this.state = 236;
	        this.match(FormulaParser.LOOPSTATEMENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	forInLoop() {
	    let localctx = new ForInLoopContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, FormulaParser.RULE_forInLoop);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 238;
	        this.match(FormulaParser.FORSTATEMENT);
	        this.state = 239;
	        this.match(FormulaParser.R_);
	        this.state = 240;
	        this.match(FormulaParser.IDENT);
	        this.state = 241;
	        this.match(FormulaParser.R_);
	        this.state = 242;
	        this.match(FormulaParser.INSTATEMENT);

	        this.state = 246;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===12) {
	            this.state = 243;
	            this.match(FormulaParser.R_);
	            this.state = 248;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 249;
	        this.logicalExpression();
	        this.state = 252;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,21,this._ctx);
	        if(la_===1) {
	            this.state = 250;
	            this.match(FormulaParser.R__);
	            this.state = 251;
	            this.innerBlock();

	        }
	        this.state = 254;
	        this.match(FormulaParser.R__);
	        this.state = 255;
	        this.match(FormulaParser.ENDBLOCK);
	        this.state = 256;
	        this.match(FormulaParser.R_);
	        this.state = 257;
	        this.match(FormulaParser.LOOPSTATEMENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifThenElse() {
	    let localctx = new IfThenElseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, FormulaParser.RULE_ifThenElse);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 259;
	        this.match(FormulaParser.IFSTATEMENT);

	        this.state = 263;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===12) {
	            this.state = 260;
	            this.match(FormulaParser.R_);
	            this.state = 265;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 266;
	        this.logicalExpression();

	        this.state = 270;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,23,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 267;
	                _la = this._input.LA(1);
	                if(!(_la===11 || _la===12)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	            }
	            this.state = 272;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,23,this._ctx);
	        }

	        this.state = 274;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===22) {
	            this.state = 273;
	            this.match(FormulaParser.THENSTATEMENT);
	        }

	        this.state = 278;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,25,this._ctx);
	        if(la_===1) {
	            this.state = 276;
	            this.match(FormulaParser.R__);
	            this.state = 277;
	            this.innerBlock();

	        }
	        this.state = 306;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,30,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 280;
	                this.match(FormulaParser.R__);
	                this.state = 281;
	                this.match(FormulaParser.ELSESTATEMENT);
	                this.state = 282;
	                this.match(FormulaParser.R_);
	                this.state = 283;
	                this.match(FormulaParser.IFSTATEMENT);

	                this.state = 287;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===12) {
	                    this.state = 284;
	                    this.match(FormulaParser.R_);
	                    this.state = 289;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	                this.state = 290;
	                this.logicalExpression();

	                this.state = 294;
	                this._errHandler.sync(this);
	                var _alt = this._interp.adaptivePredict(this._input,27,this._ctx)
	                while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                    if(_alt===1) {
	                        this.state = 291;
	                        _la = this._input.LA(1);
	                        if(!(_la===11 || _la===12)) {
	                        this._errHandler.recoverInline(this);
	                        }
	                        else {
	                        	this._errHandler.reportMatch(this);
	                            this.consume();
	                        }
	                    }
	                    this.state = 296;
	                    this._errHandler.sync(this);
	                    _alt = this._interp.adaptivePredict(this._input,27,this._ctx);
	                }

	                this.state = 298;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                if(_la===22) {
	                    this.state = 297;
	                    this.match(FormulaParser.THENSTATEMENT);
	                }

	                this.state = 302;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,29,this._ctx);
	                if(la_===1) {
	                    this.state = 300;
	                    this.match(FormulaParser.R__);
	                    this.state = 301;
	                    this.innerBlock();

	                }
	            }
	            this.state = 308;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,30,this._ctx);
	        }

	        this.state = 315;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,32,this._ctx);
	        if(la_===1) {
	            this.state = 309;
	            this.match(FormulaParser.R__);
	            this.state = 310;
	            this.match(FormulaParser.ELSESTATEMENT);
	            this.state = 313;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,31,this._ctx);
	            if(la_===1) {
	                this.state = 311;
	                this.match(FormulaParser.R__);
	                this.state = 312;
	                this.innerBlock();

	            }

	        }
	        this.state = 317;
	        this.match(FormulaParser.R__);
	        this.state = 318;
	        this.match(FormulaParser.ENDBLOCK);
	        this.state = 319;
	        this.match(FormulaParser.R_);
	        this.state = 320;
	        this.match(FormulaParser.IFSTATEMENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionDef() {
	    let localctx = new FunctionDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, FormulaParser.RULE_functionDef);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 322;
	        this.match(FormulaParser.FUNCTIONSTATEMENT);
	        this.state = 323;
	        this.match(FormulaParser.R_);
	        this.state = 324;
	        this.match(FormulaParser.IDENT);
